<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editIngredientName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingredient_name_hint"/>

    <EditText
        android:id="@+id/editIngredientQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingredient_quantity_hint"
        android:inputType="numberDecimal"/>


    <EditText
        android:id="@+id/editIngredientUnit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingredient_unit_hint"/>

    <Button
        android:id="@+id/buttonAddIngredient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_ingredient_button" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button" />

</LinearLayout>
