<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:paddingBottom="16dp"
        android:text="@string/title_text"
        android:textSize="24sp"
        android:textStyle="bold" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardRecipeAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleText"
        app:strokeColor="@color/red_200"
        app:strokeWidth="1dp">

        <TextView
            android:id="@+id/noRecipeAlert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_recipe"
            android:layout_gravity="center"
            android:padding="10dp"
            android:textAlignment="center"/>


        <GridView
            android:id="@+id/recipesListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:horizontalSpacing="8dp"
            android:minHeight="45dp"
            android:numColumns="2"
            android:padding="5dp"
            android:verticalSpacing="8dp"
            tools:listitem="@layout/recette_elements" />
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addRecipeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/red_200"
        android:src="@drawable/baseline_add_24"
        android:text="@string/add_recipe_button"
        app:tint="@color/red_700" />


</RelativeLayout>


